@startuml

class Car 
{ 
    - final String _id
    - final String _model
    - final String _brand

    + Car(String id, String model, String brand)
    + String getId()
    + String getModel()
    + String getBrand()
}

    
class CarManager 
{
    - cars
    - carsComparator
}

    
class CarComparator
{
    - List<Car> _carsDb
    
    + Car getBestCar()
}

class CarDB 
{
   - List<Car> _carsDb

   + Car getFromDb(String carId)
   + String getCarsNames()
}

CarManager -- CarDB
CarManager -- CarComparator

CarComparator -. Car
CarDB -> Car

@enduml
